# Jinzougan

./: .gitignore  Cargo.toml  README.md
src/: main.rs  utils.rs
src/bins/: classify.rs  detect.rs
src/python files/: camera_app4.py  gui.py  manual_classifier copy.py  navigation.py  predict.py  requirements.txt  train.py  validate.py
